# dikom

./: .dockerignore  CMakeLists.txt  DEMO.md  Dockerfile  README.md  comand.txt  docker-compose.yml  package.xml
config/: ground_plane.sdf  rviz.rviz
config/boxes/: box.sdf
config/nav2/: empty_map.yaml  nav2_bt_navigator.xml  nav2_params.yaml  slam_toolbox_params.yaml
config/objects/: box.sdf
docker/: entrypoint.sh
launch/: display.launch  display.launch.py  full_simulation.launch.py  gazebo.launch  gazebo.launch.py
meshes/: base_link.STL  left_wheel.STL  lidar.STL  right_wheel.STL
src/: test.py
srv/: FindRack.srv
urdf/: amr.csv  amr.urdf  Сборка1.csv  Сборка1.urdf
